# drone_kkk_ws

./: README.md
install/: local_setup.sh  setup.sh
install/decision_node/lib/decision_node/: waypoint_fsm
install/decision_node/share/decision_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_msgs/include/drone_msgs/drone_msgs/msg/: marker_center.h  marker_center.hpp  waypoint.hpp
install/drone_msgs/include/drone_msgs/drone_msgs/msg/detail/: marker_center__builder.hpp  marker_center__traits.hpp  marker_center__type_support.h  waypoint__struct.h  waypoint__struct.hpp  (+3 more)
install/drone_msgs/share/ament_index/resource_index/rosidl_interfaces/: drone_msgs
install/drone_msgs/share/drone_msgs/: local_setup.sh  package.sh
install/drone_msgs/share/drone_msgs/cmake/: drone_msgsConfig.cmake  drone_msgs__rosidl_typesupport_introspection_cExport.cmake  drone_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/drone_msgs/share/drone_msgs/msg/: MarkerCenter.idl  Waypoint.idl  Waypoint.msg
install/perception_node/lib/perception_node/: waypoint_detector
install/perception_node/share/perception_node/: package.ps1  package.sh
install/px4/include/px4/px4/msg/: device_information.hpp  gain_compression.h  gain_compression.hpp  sensor_temp.h
install/px4/share/px4/: local_setup.sh  package.sh
install/px4/share/px4/msg/: ActuatorMotors.idl  BatteryStatus.idl  DeviceInformation.idl  EscReport.idl  EstimatorStatusFlags.idl  RegisterExtComponentRequest.idl  VehicleCommand.idl  VehicleStatus.idl
log/: latest_build
src/decision_node/: setup.cfg  setup.py
src/decision_node/decision_node/mission_waypoint/: waypoint_fsm.py
src/drone_description/: package.xml  setup.cfg  setup.py
src/drone_description/launch/: state_pub.launch.py
src/drone_description/urdf/: drone.urdf.xacro  macros.xacro
src/drone_msgs/: CMakeLists.txt
src/lidar_gz_reader/: CMakeLists.txt  package.xml
src/lidar_gz_reader/src/: lidar_reader.cpp
src/perception_node/: package.xml  setup.py
src/perception_node/perception_node/camera/mission_waypoint/: waypoint_detector.py
(+119 files in other folders)
