<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>lidar_gz_reader</name>
  <version>0.0.0</version>
  <description>Gazebo LiDAR reader and ROS2 bridge</description>

  <maintainer email="job3682560@gmail.com">dong</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <!-- Gazebo (CMake only, not ROS packages) -->
  <!-- ❗ gz-* 는 package.xml에 안 써도 됨 -->

  <!-- test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
