<?xml version="1.0"?>
<package format="3">
  <name>decision_node</name>
  <version>0.0.1</version>
  <description>Decision/FSM for drone missions</description>

  <maintainer email="you@todo.todo">dong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>drone_msgs</depend>
  
    <export>
    <build_type>ament_python</build_type>
  </export>
</package>
